--- a/docs/lib/sage_rails/app/views/sage_components/_sage_form_select.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_form_select.html.erb
@@ -57,8 +57,7 @@
   <pds-icon
     aria-hidden="true"
     class="sage-select__arrow"
-    color="<%= SageTokens::COLOR_PALETTE[:GREY_600] %>"
-    name="caret-down"
+    name="enlarge"
   ></pds-icon>
   <% if component.message.present? %>
     <div class="sage-select__info">
