--- a/packages/sage-assets/lib/stylesheets/components/_form_input.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_input.scss
@@ -160,7 +160,7 @@ $-input-text-height: var(--pine-font-size-body);
   }
 
   .sage-form-field--error & i {
-    color: var(--pine-color-red-500);
+    color: var(--pine-color-danger);
   }
 }
 
