--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -272,11 +272,6 @@ $-btn-loading-min-height: rem(36px);
     }
   }
 
-  .sage-input-group & {
-    border-start-start-radius: var(--pine-dimension-none);
-    border-end-start-radius: var(--pine-dimension-none);
-  }
-
   .sage-badge & {
     display: flex;
     justify-content: center;
@@ -324,10 +319,14 @@ $-btn-loading-min-height: rem(36px);
     z-index: sage-z-index(default, 1);
     inset-inline-end: rem(1px);
     bottom: rem(1px);
-    height: rem(38px);
+    height: rem(34px);
+    background-color: sage-color(white);
     background-color: var(--pine-color-secondary);
-    box-shadow: rem(-1px) 0 0 0 var(--pine-color-grey-300);
     border-color: transparent;
+    border-start-end-radius: 10px;
+    border-end-end-radius: 10px;
+    border-start-start-radius: 0;
+    border-end-start-radius: 0;
 
     @include sage-focus-outline--update-color(transparent);
 
